--- a/style/scss/custom-globals/_variables.scss
+++ b/style/scss/custom-globals/_variables.scss
@@ -1,4 +1,4 @@
-// Color Variables
+// Colors
 $primary:            #335C81;
 $secondary:          #6CCFF6;
 $accent:             #C2EFB3;
@@ -6,3 +6,11 @@ $light:              #F7F9F9;
 
 $darkGray:           #4D5359;
 $black:              #333333;
+
+
+// Media Queries
+$screen-sm-max:      39.9374em;
+$screen-md-min:      40em;
+$screen-md-max:      63.9375em;
+$screen-lg-min:      64em;
+$screen-lg-max:      74.9375em;
