--- a/style/scss/layout/_sidebar.scss
+++ b/style/scss/layout/_sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar{
     background: $light;
     height: calc(100% - 80px);
-    min-width: 260px;
+    width: 25%;
     overflow: scroll;
     position: fixed;
     transition: .5s all ease;
