added password confirmation to signup form

--- a/style/main.scss
+++ b/style/main.scss
@@ -1,6 +1,7 @@
 // Custom Globals
 @import 'scss/custom-globals/scaffolding';
 @import 'scss/custom-globals/variables';
+@import 'scss/custom-globals/elements';
 
 // Layout
 @import 'scss/layout/header';
