--- a/style/scss/custom-globals/_variables.scss
+++ b/style/scss/custom-globals/_variables.scss
@@ -3,6 +3,7 @@ $primary:            #335C81;
 $secondary:          #6CCFF6;
 $accent:             #C2EFB3;
 $light:              #F7F9F9;
+$danger:             #F22613;
 
 $darkGray:           #4D5359;
 $black:              #333333;
