updated styling and functionality for user widget

--- a/style/main.scss
+++ b/style/main.scss
@@ -10,3 +10,4 @@
 // Components
 @import 'scss/components/login-page';
 @import 'scss/components/dashboard';
+@import 'scss/components/user-widget';
